# vbll

./: .gitignore  .readthedocs.yaml  README.md  disciminative_classification.ipynb  license.txt  pyproject.toml  pytest.ini  regression.ipynb  run_tests.py  setup.py
.github/workflows/: ci.yml
docs/: api_documentation.rst  citation.rst  conf.py  getting_started.rst  index.rst  requirements.txt  tutorials.rst
docs/tutorials/: VBLL_Classification.ipynb  VBLL_Regression.ipynb  VBLL_Regression_JAX.ipynb  regression.ipynb
tests/: README.md  __init__.py  conftest.py  test_benchmarks.py  test_classification.py  test_distributions.py  test_integration.py  test_regression.py  test_utils.py
vbll/: __init__.py
vbll/jax/layers/: __init__.py  regression.py
vbll/jax/utils/: distributions.py
vbll/layers/: __init__.py  classification.py  regression.py
vbll/modules/: regression.py
vbll/utils/: distributions.py
