[tool.poetry]
name = "vbll"
version = "0.2.2"
description = ""
authors = ["John Willes <johnwilles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">= 1.6.0"
numpy = ">= 1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
